Add nix support & test changes.

--- a/math1/stack.yaml
+++ b/math1/stack.yaml
@@ -8,7 +8,7 @@ packages:
 - '.'
 
 nix:
-    enable: false
+    enable: true
     packages: [openssl,zlib,openssh,git,pcre]
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
