--- a/math1/math1.cabal
+++ b/math1/math1.cabal
@@ -3,24 +3,24 @@
 
 name:                math1
 version:             0.1.0.0
--- synopsis:            
--- description:         
+-- synopsis:
+-- description:
 license:             GPL-3
 license-file:        LICENSE
 author:              Mikhail Volkhov
 maintainer:          volhovm.cs@gmail.com
 category:            Math
 build-type:          Simple
--- extra-source-files:  
+-- extra-source-files:
 cabal-version:       >=1.10
 
 executable math1
   main-is:             Main.hs
-  -- other-modules:       
-  -- other-extensions:    
+  -- other-modules:
+  -- other-extensions:
   build-depends:       base >=4.8 && <4.9
+                     , aeson >= 0.9.0.1
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
                      , RecordWildCards
-
