Refactoring, cosmetics, fix build.

--- a/math1/stack.yaml
+++ b/math1/stack.yaml
@@ -8,8 +8,8 @@ packages:
 - '.'
 
 nix:
-    enable: true
-    packages: [openssl,zlib,openssh,git,pcre]
+    enable: false
+    packages: [zlib,openssh,git,pcre,gtk,pkgconfig,cairo,glib,gnome.pango,gnome3.gtk]
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps: []
