--- a/math1/math1.cabal
+++ b/math1/math1.cabal
@@ -16,11 +16,17 @@ cabal-version:       >=1.10
 
 executable math1
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       Gauss
+                     , Glade
+                     , Types
   -- other-extensions:
-  build-depends:       base >=4.8 && <4.9
-                     , aeson >= 0.9.0.1
+  build-depends:       aeson >= 0.9.0.1
+                     , array >= 0.5.1.0
+                     , base >=4.8 && <4.9
+                     , gtk3 >= 0.14.2
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
                      , RecordWildCards
+                     , UnicodeSyntax
+                     , TypeOperators
