--- a/math1/math1.cabal
+++ b/math1/math1.cabal
@@ -21,7 +21,9 @@ executable math1
   -- other-extensions:
   build-depends:       aeson >= 0.9.0.1
                      , array >= 0.5.1.0
-                     , base >=4.8 && <4.9
+                     , base >= 4.8.2.0 
+                     , mtl >= 2.2.1
+                     , hmatrix >= 0.17.0.1
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
