--- a/math1/stack.yaml
+++ b/math1/stack.yaml
@@ -20,6 +20,9 @@ flags: {}
 # Extra package databases containing global packages
 extra-package-dbs: []
 
+extra-lib-dirs:
+    - /usr/lib
+
 # Control whether we use the GHC we find on the path
 # system-ghc: true
 
