--- a/math1/math1.cabal
+++ b/math1/math1.cabal
@@ -22,13 +22,17 @@ executable math1
   -- other-extensions:
   build-depends:       aeson >= 0.9.0.1
                      , array >= 0.5.1.0
-                     , base >= 4.8.2.0 
-                     , mtl >= 2.2.1
+                     , base >= 4.8.2.0
+                     , brick >= 0.4.1
                      , hmatrix >= 0.17.0.1
                      , lens >= 4.13
                      , monad-loops >= 0.4.3
+                     , mtl >= 2.2.1
+                     , vty >= 5.4.0
+                     , vector >= 0.11.0.0
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
   default-extensions:  OverloadedStrings
                      , RecordWildCards
                      , UnicodeSyntax
