Add first GUI sketches.

--- a/math1/stack.yaml
+++ b/math1/stack.yaml
@@ -9,7 +9,7 @@ packages:
 
 nix:
     enable: false
-    packages: [zlib,openssh,git,pcre,blas,liblapack,ncurses]
+    packages: [zlib,openssh,git,pcre,blas,liblapack,ncurses,gfortran48]
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps: []
