--- a/math1/math1.cabal
+++ b/math1/math1.cabal
@@ -28,8 +28,10 @@ executable math1
                      , lens >= 4.13
                      , monad-loops >= 0.4.3
                      , mtl >= 2.2.1
-                     , vty >= 5.4.0
+                     , text >= 1.2.2.0
+                     , transformers >= 0.4.2.0
                      , vector >= 0.11.0.0
+                     , vty >= 5.4.0
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
