--- a/math1/math1.cabal
+++ b/math1/math1.cabal
@@ -18,6 +18,7 @@ executable math1
   main-is:             Main.hs
   other-modules:       Gauss
                      , ConjGradient
+                     , Relax
                      , Types
   -- other-extensions:
   build-depends:       aeson >= 0.9.0.1
