mda oh uzh etot jacobi

--- a/math1/math1.cabal
+++ b/math1/math1.cabal
@@ -19,6 +19,7 @@ executable math1
   other-modules:       Gauss
                      , ConjGradient
                      , Relax
+                     , Iterative
                      , Types
   -- other-extensions:
   build-depends:       aeson >= 0.9.0.1
