--- a/ode/ode.cabal
+++ b/ode/ode.cabal
@@ -17,9 +17,11 @@ executable ode
   main-is:             Main.hs
   other-modules:       Solve
   build-depends:       base
-                     , Chart
-                     , Chart-cairo
+                     , Chart >= 1.5
+                     , Chart-gtk >= 1.5
                      , easyplot
+                     , gtk >= 0.13
+  pkgconfig-depends:   zlib
   default-language:    Haskell2010
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
   default-extensions:  RecordWildCards
