--- a/fdm/fdm.cabal
+++ b/fdm/fdm.cabal
@@ -11,8 +11,8 @@ executable fdm
   build-depends:       base
                      , Chart
                      , Chart-cairo
-                     --, Chart-gtk
-                     --, gtk
+                     , Chart-gtk
+                     , gtk
                      , vector
                      , lens
   default-language:    Haskell2010
