--- a/fdm/fdm.cabal
+++ b/fdm/fdm.cabal
@@ -15,6 +15,7 @@ executable fdm
                      , gtk
                      , vector
                      , lens
+                     , mtl
   default-language:    Haskell2010
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
   default-extensions:  MultiWayIf
